...
            android:layout_alignParentBottom="true"
            android:background="@color/paletteLightGreyB100"
            android:orientation="horizontal"
            android:transitionName="urlbar">

            <org.mozilla.rocket.awesomebar.CompleteAwareInlineAutocompleteEditText
                android:id="@+id/url_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
...
