...
    <string name="contextmenu_link_copy">Copy link address</string>
    <!-- Label used in the contextmenu shown when long-pressing on an image -->
    <string name="contextmenu_image_share">Share image</string>
    <!-- Label used in the contextmenu shown when long-pressing on an image -->
    <string name="contextmenu_image_copy">Copy image address</string>
    <!-- Label used in the contextmenu shown when long-pressing on an image -->
    <string name="contextmenu_image_save">Save image</string>
    <!-- Label used in the contextmenu shown when long-pressing on a link -->
    <string name="contextmenu_open_in_new_tab">Open link in new tab</string>
    <!-- Label used in the contextmenu shown when long-pressing on a image -->
    <string name="contextmenu_open_image_in_new_tab">Open image in new tab</string>

    <string name="new_name_upgrade_page_title">We have a new look!</string>
...
    <string name="geolocation_dialog_message">%1$s \nwants to access your location.</string>
    <!-- A checkbox option in the dialog which ask users to give geolocation permission to the site.
        Users' decision will be remembered and future display of the dialog will be skipped if this
        option is checked. These memorized decisions will be wiped out if the App is restarted.
        %1$s is the App name (Firefox Rocket). -->
    <string name="geolocation_dialog_message_cache_it">Don’t ask again for this site until %1$s restarts</string>
    <string name="geolocation_dialog_allow">ALLOW</string>
    <string name="geolocation_dialog_block">BLOCK</string>

    <!-- Setting Clear browsing data dialog-->
    <string name="setting_dialog_clear_data">Clear Data</string>
    <string name="setting_dialog_cancel">Cancel</string>
    <string name="setting_dialog_browsing_history">Browsing history</string>
...
    <string name="browsing_history_dialog_btn_clear">Clear</string>

    <!-- Remove the item from Download file panel -->
    <string name="remove_from_list">Remove from list</string>

    <!-- Remove the item from Download file panel and delete the file -->
    <string name="delete_file">Delete file</string>

    <!-- Long Screenshot -->
    <!-- Message that is shown for a few seconds after a successful screenshot capture. -->
    <string name="screenshot_saved">Screenshot saved</string>
    <!-- Message that is shown for a few seconds after a failed screenshot capture. -->
    <string name="screenshot_failed">Failed to capture screenshot</string>
...
